--- a/plugin.xml
+++ b/plugin.xml
@@ -19,7 +19,7 @@
     </engines>
 
     <platform name="android">
-        <source-file src="src/ru/cordova/plugins/cryptopro.java" target-dir="src/ru/cordova/plugins/" />
+        <source-file src="src/ru/eaasoft/plugins/Cryptopro.java" target-dir="src/ru/eaasoft/plugins/" />
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Country" >
                 <param name="android-package" value="ru.eaasoft.cordova-plugin-cryptopro"/>
