--- a/plugin.xml
+++ b/plugin.xml
@@ -21,9 +21,28 @@
     <platform name="android">
         <source-file src="src/ru/eaasoft/plugins/Cryptopro.java" target-dir="src/ru/eaasoft/plugins/" />
         <config-file target="res/xml/config.xml" parent="/*">
-            <feature name="Country" >
-                <param name="android-package" value="ru.eaasoft.cordova-plugin-cryptopro"/>
+            <feature name="Cryptopro" >
+                <param name="android-package" value="ru.eaasoft.plugins.CryptoproPlugin" />
             </feature>
         </config-file>
+
+        <framework src="src/android/cryptopro.gradle" custom="true" type="gradleReference" />
+
+        <source-file src="src/android/libs/AdES-core.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/ASN1P.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/asn1rt.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/bcpkix-jdk15on-1.50.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/bcprov-jdk15on-1.50.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/CAdES.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/cpSSL.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCP.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCPRequest.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCPRevCheck.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCPRevCheck.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCPRevTools.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCPxml.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JCSP-android.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/JInitCSP.jar" target-dir="libs" framework="true"/>
+        <source-file src="src/android/libs/xmlsec-1.4.4.jar" target-dir="libs" framework="true"/>
     </platform>
 </plugin>
